Fixed bugs with flex-wrap, added icon to cards in projects
Fixed some flex-wrap bugs for smaller screens, added upload icons to cards showing if it was published (and where)

--- a/CSS/projects.css
+++ b/CSS/projects.css
@@ -3,6 +3,7 @@
 .card-container {
     display: flex;
     gap: 2em;
+    flex-wrap:wrap;
 }
 
 /* Add shadows to create the "card" effect */
@@ -95,6 +96,9 @@
 
 /* Media queries for responsiveness */
 @media screen and (max-width: 768px) {
+    .card-container {
+        width: 100vw;
+    }
     .card {
         width: 50%;
     }
